# ai-chain

./: Cargo.toml  GOAL.txt  SECURITY.md  justfile
ai-chain-ui/: README.md  package.json
crates/ai-chain/: Cargo.toml  README.md
crates/ai-chain-gemma/: Cargo.toml
crates/ai-chain-gemma/examples/: simple.rs
crates/ai-chain-gemma/src/: context.rs  executor.rs
crates/ai-chain-glm/: Cargo.toml
crates/ai-chain-glm/examples/: chain-from-yaml.rs  conversation.rs  generator_with_parameter.rs  map_reduce_long_article.rs  sequential_generation.rs  simple_embeddings.rs  simple_generator.rs  simple_invocation.rs  simple_sequential_generation_stream.rs
crates/ai-chain-glm/src/chatgpt/: executor.rs  mod.rs  model.rs
crates/ai-chain-hnsw/: Cargo.toml
crates/ai-chain-hnsw/examples/: dump_load.rs
crates/ai-chain-local/: Cargo.toml
crates/ai-chain-local/src/: executor.rs
crates/ai-chain-macros/: Cargo.toml
crates/ai-chain-milvus/: Cargo.toml
crates/ai-chain-milvus/examples/: milvus_vectorstore.rs  similarity_search_milvus.rs
crates/ai-chain-milvus/src/: errors.rs
crates/ai-chain-mock/: Cargo.toml  README.md
crates/ai-chain-mock/examples/: simple-mock.rs
crates/ai-chain-mock/src/: executor.rs
crates/ai-chain-model-provider/ai-chain-gemma/: Cargo.toml
crates/ai-chain-model-provider/ai-chain-gemma-sys/: Cargo.toml  build.rs
crates/ai-chain-model-provider/ai-chain-glm/: Cargo.toml
crates/ai-chain-model-provider/ai-chain-glm/examples/: conversation.rs  generator_with_parameter.rs  map_reduce_long_article.rs  simple_invocation.rs
crates/ai-chain-model-provider/ai-chain-local/: Cargo.toml  README.md
crates/ai-chain-model-provider/ai-chain-local/examples/: simple_llm_local.rs
crates/ai-chain-model-provider/ai-chain-mock/: Cargo.toml
crates/ai-chain-model-provider/ai-chain-moonshot/: Cargo.toml
crates/ai-chain-model-provider/ai-chain-moonshot/examples/: chain-from-yaml.yaml  conversation.rs  sequential_generation.rs  simple_agent.rs  simple_embeddings.rs  simple_invocation.rs
crates/ai-chain-model-provider/ai-chain-openai/: Cargo.toml
crates/ai-chain-model-provider/ai-chain-openai-compatible/: Cargo.toml
crates/ai-chain-model-provider/ai-chain-openai-compatible/src/: lib.rs
crates/ai-chain-model-provider/ai-chain-openai/examples/: chain-from-yaml.rs  self_ask_with_search.rs  simple_generator.rs  simple_sequential_generation_stream.rs
crates/ai-chain-model-provider/ai-chain-openai/src/: embeddings.rs
crates/ai-chain-model-provider/ai-chain-qwen/: Cargo.toml
crates/ai-chain-model-provider/ai-chain-qwen/examples/: chain-from-yaml.rs  generator_with_parameter.rs  simple_sequential_generation_stream.rs
crates/ai-chain-model-provider/ai-chain-sagemaker-endpoint/: CHANGELOG.md  Cargo.toml
crates/ai-chain-model-provider/ai-chain-sagemaker-endpoint/src/: model.rs
crates/ai-chain-moonshot/: Cargo.toml
crates/ai-chain-moonshot/examples/: chain-from-yaml.rs  conversation.rs  generator_with_parameter.rs  map_reduce_long_article.rs  simple_generator.rs  simple_invocation.rs
crates/ai-chain-moonshot/src/: lib.rs
crates/ai-chain-moonshot/src/chatgpt/: Config.rs  executor.rs  model.rs  prompt.rs
crates/ai-chain-openai/: Cargo.toml
crates/ai-chain-openai-compatible/: Cargo.toml
crates/ai-chain-openai-compatible/examples/: chain-from-json.rs  sequential_generation.rs  simple_embeddings.rs
crates/ai-chain-openai-compatible/src/: lib.rs
crates/ai-chain-openai-compatible/src/chatgpt/: config.rs  error.rs  executor.rs  mod.rs  model.rs  prompt.rs
crates/ai-chain-openai/examples/: conversation.rs  self_ask_with_google_search.rs
crates/ai-chain-qdrant/: Cargo.toml  README.md
crates/ai-chain-qdrant/examples/: qdrant_vectorstore.rs  similarity_search_llama.rs  similarity_search_qdrant.rs  vectorstore_tool_invocation.rs
crates/ai-chain-qdrant/src/: lib.rs
crates/ai-chain-qwen/: Cargo.toml
crates/ai-chain-qwen/examples/: chain-from-stream-md-yaml.rs  chain-from-stream-yaml.rs  conversation.rs  map_reduce_long_article.rs  sequential_generation.rs  simple_agent.rs  simple_embeddings.rs  simple_generator.rs  simple_invocation.rs
crates/ai-chain-qwen/src/chatgpt/: executor.rs  text_splitter.rs
crates/ai-chain-sagemaker-endpoint/: Cargo.toml  README.md
crates/ai-chain-sagemaker-endpoint/examples/: simple-sagemaker.rs
crates/ai-chain-sagemaker-endpoint/src/: executor.rs
crates/ai-chain-surrealdb/: Cargo.toml
crates/ai-chain-types/: Cargo.toml
crates/ai-chain-types/src/: constants.rs  field_type.rs  helper.rs  json_types.rs  lib.rs  node.rs
crates/ai-chain-types/src/arrow_types/: from_arrow.rs  tests.rs  to_arrow.rs
crates/ai-chain-types/src/models/: config.rs  connection.rs  ingestion_types.rs  json_schema_helper.rs  mod.rs  telemetry.rs
crates/ai-chain-types/src/tests/: ai_chain_yaml_deserialize.rs  api_config_yaml_deserialize.rs  mod.rs
crates/ai-chain-types/src/types/: field.rs  mod.rs  tests.rs
crates/ai-chain-vector/ai-chain-hnsw/: Cargo.toml  README.md
crates/ai-chain-vector/ai-chain-hnsw/examples/: dump_load.rs  similarity_search-hnsw.rs
crates/ai-chain-vector/ai-chain-hnsw/src/: lib.rs
crates/ai-chain-vector/ai-chain-milvus/: Cargo.toml
crates/ai-chain-vector/ai-chain-qdrant/: Cargo.toml  qdrant.http
crates/ai-chain-vector/ai-chain-surrealdb/: Cargo.toml
crates/ai-chain/examples/: bing_search.rs  extract_labeled_text.rs  google_serper.rs  multitool.rs  tool_derive_describe.rs  tools_prompt.rs
crates/ai-chain/src/: executor.rs  lib.rs  options.rs  parameters.rs  parsing.rs  serialization.rs  tokens.rs  traits.rs
crates/ai-chain/src/chains/: map_reduce.rs  sequential.rs
crates/ai-chain/src/output/: mod.rs
crates/ai-chain/src/prompt/: chat.rs  mod.rs
crates/ai-chain/src/prompt/string_template/: mod.rs
crates/ai-chain/src/tools/: mod.rs
crates/ai-chain/src/tools/tools/: mod.rs
crates/ai-chain/src/tools/tools/scraper/: scraper.rs
crates/ai-chain/src/tools/tools/sql/: mod.rs  sql.rs  tool.rs
crates/ai-chain/src/workflow/: mod.rs  node.rs
docs/: README.md
(+5 files in other folders)
