[package]
name = "ai-chain-gemma"
description = "The ai-chain implementation for Gemma."
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["llm", "langchain", "gemma", "chain"]
categories = ["science"]
authors = [
     "linchong <729883852@qq.com>", "Jun Mukai <jun.mukai@gmail.com>"
]
readme = "./README.md"
repository = "https://github.com/godlinchong/ai-chain/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
ai-chain = {path = "../ai-chain", version="0.13.0"}
ai-chain-gemma-sys = {path = "../ai-chain-gemma-sys", version="0.1.0"}
tokio.workspace = true
thiserror.workspace = true
