[package]
name = "ai-chain-glm"
version = "0.14.0"
edition = "2021"
description = "A library implementing `ai-chains` for moonshot OpenAI's models. Chains can be use to apply the model series to complete complex tasks, such as text summation."
license = "MIT"
keywords = ["llm", "langchain", "chatgpt", "chain"]
categories = ["science"]
authors = ["linchong <729883852@qq.com>"]
readme = "../../docs/README.md"
repository = "https://github.com/godlinchong/ai-chain"

[features]

[dependencies]
futures = "0.3.28"
async-openai = "0.16.2"
async-trait.workspace = true
ai-chain = { path = "../ai-chain", version = "0.14.0", default-features = false }
ai-chain-openai-compatible = { path = "../ai-chain-openai-compatible", version = "0.14.0", default-features = false }

serde.workspace = true
strum = "0.24"
strum_macros = "0.24"
thiserror.workspace = true
tiktoken-rs = { version = "0.5.7" }
tokio.workspace = true

[dev-dependencies]
tokio = "1.28.2"
qdrant-client = "1.3.0"
ai-chain = { path = "../ai-chain" }
ai-chain-openai-compatible = { path = "../ai-chain-openai-compatible" }
anyhow = "1.0.70"
serde_yaml = "0.9.21"
reqwest = "0.11.27"