[package]
name = "ai-chain-hnsw"
version = "0.14.0"
edition = "2021"
description = "For using hnsw with ai-chain"
license = "MIT"
keywords = ["llm", "langchain", "hnsw", "chain"]
categories = ["science"]
authors = [
    "linchong <729883852@qq.com>", "Jun Mukai <jun.mukai@gmail.com>"
]
readme = "README.md"
repository = "https://github.com/godlinchong/ai-chain/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
hnsw_rs = "0.2"
ai-chain = { path = "../ai-chain", version = "0.14.0", default-features = false }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
ai-chain-openai = { path = "../ai-chain-openai" }
