[package]
name = "ai-chain-macros"
version = "0.14.2"
edition = "2021"
license = "MIT"
description = "Set of macros for use with ai-chain"
keywords = ["llm", "langchain", "ggml", "chain"]
categories = ["science"]
authors = ["William Rudenmalm <william@sobel.io>"]
repository = "https://github.com/godlinchong/ai-chain/"


[lib]
proc-macro = true


[dependencies]
syn = "2.0.18"
