[package]
name = "ai-chain"
version = "0.14.2"
edition = "2021"
description = "A library for running chains of LLMs (such as ChatGPT) in series to complete complex tasks, such as text summation."
license = "MIT"
keywords = ["llm", "langchain", "chatgpt", "chain"]
categories = ["science"]
authors = [
    "linchong <729883852@qq.com>", "Jun Mukai <jun.mukai@gmail.com>"
]
repository = "https://github.com/godlinchong/ai-chain/"

[features]


[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.68"
futures = "0.3.28"
serde = { version = "1.0.164", features = ["derive"] }
serde_yaml = { version = "0.9.27" }
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["fs", "io-util", "rt", "macros"] }
markdown = { version = "1.0.0-alpha.8" }
tera = { version = "1.19.0" }
lazy_static = "1.4.0"
uuid = { version = "1.6.1", features = ["v4"] }
derive_builder = "0.12.0"
serde_json = "1.0.99"
reqwest = { version = "0.11.18", features = ["json"] }
tokio-stream = "0.1.14"
strum = "0.25.0"
strum_macros = "0.25.3"
paste = "1.0.12"
daggy = { version = "0.8.0", features = ["serde-1"] }
coerce = { version = "0.8.11", features = ["full"] }
ai-chain-types = { path = "../ai-chain-types" }

[dev-dependencies]
mockall = "0.11.4"
ai-chain-macros = { path = "../ai-chain-macros" }
ai-chain-types = { path = "../ai-chain-types" }
